@@ -21,56 +21,59 @@ import org.springframework.web.bind.annotation.*;
 @Controller
 @RequestMapping("/home")
 public class HomeController {
-    @Autowired
-    private CategoryService categoryService;
-    @Autowired
-    private CourseService courseService;
+        @Autowired
+        private CategoryService categoryService;
+        @Autowired
+        private CourseService courseService;
 
-    @GetMapping()
-    public String getMethodName(Model model) {
-        // chia làm 2 danh sách:
-        List<CategoryDTO> firstFive = categoryService.getAllCategory().stream().limit(5).toList();
-        List<CategoryDTO> nextFive = categoryService.getAllCategory().stream().skip(5).limit(5).toList();
-        model.addAttribute("topCourses", courseService.getTopCourses().stream().limit(5).collect(Collectors.toList()));
-        model.addAttribute("topCategories", categoryService.findTop5ByOrderByIdAsc());
-        model.addAttribute("firstFive", firstFive);
-        model.addAttribute("nextFive", nextFive);
-        return "homePage/index";
-    }
+        @GetMapping()
+        public String getMethodName(Model model) {
+                // chia làm 2 danh sách:
+                List<CategoryDTO> firstFive = categoryService.getAllCategory().stream().limit(5).toList();
+                List<CategoryDTO> nextFive = categoryService.getAllCategory().stream().skip(5).limit(5).toList();
+                model.addAttribute("topCourses",
+                                courseService.getTopCourses().stream().limit(5).collect(Collectors.toList()));
+                model.addAttribute("topCategories", categoryService.findTop5ByOrderByIdAsc());
+                model.addAttribute("firstFive", firstFive);
+                model.addAttribute("nextFive", nextFive);
+                return "homePage/index";
+        }
 
-    @GetMapping("/coursesGrid")
-    public String coursesGrid(Model model, @RequestParam(defaultValue = "0") int page,
-            @RequestParam(required = false) String keyword,
-            @RequestParam(required = false) List<Long> categoryIds,
-            @RequestParam(required = false) List<String> priceFilters,
-            @RequestParam(required = false) List<String> levels,
-            @RequestParam(defaultValue = "Newest") String sortBy,
-            @RequestParam(defaultValue = "9") int size) {
-        Page<CourseDTO> courses = courseService.searchCoursesGrid(categoryIds, priceFilters, levels, sortBy, keyword,
-                page, size); // lưu ý trả về Page<CourseDTO>
-        model.addAttribute("categories", categoryService.getListCategories());
-        model.addAttribute("courses", courses.getContent());
-        model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", courses.getTotalPages());
-        model.addAttribute("totalItems", courses.getTotalElements());
-        return "homePage/course-grid";
-    }
+        @GetMapping("/coursesGrid")
+        public String coursesGrid(Model model, @RequestParam(defaultValue = "0") int page,
+                        @RequestParam(required = false) String keyword,
+                        @RequestParam(required = false) List<Long> categoryIds,
+                        @RequestParam(required = false) List<String> priceFilters,
+                        @RequestParam(required = false) List<String> levels,
+                        @RequestParam(defaultValue = "Newest") String sortBy,
+                        @RequestParam(defaultValue = "9") int size) {
+                Page<CourseDTO> courses = courseService.searchCoursesGrid(categoryIds, priceFilters, levels, sortBy,
+                                keyword,
+                                page, size); // lưu ý trả về Page<CourseDTO>
+                model.addAttribute("categories", categoryService.getListCategories());
+                model.addAttribute("courses", courses.getContent());
+                model.addAttribute("currentPage", page);
+                model.addAttribute("totalPages", courses.getTotalPages());
+                model.addAttribute("totalItems", courses.getTotalElements());
+                model.addAttribute("categoryIds", categoryIds);
+                return "homePage/course-grid";
+        }
 
-    @GetMapping("/course-detail")
-    public String courseDetail(@RequestParam("id") Long id, Model model) {
-        Course course = courseService.findById(id);
+        @GetMapping("/course-detail")
+        public String courseDetail(@RequestParam("id") Long id, Model model) {
+                Course course = courseService.findById(id);
 
-        int totalStudents = course.getInstructor().getCourses()
-                .stream()
-                .mapToInt(c -> c.getEnrollments().size())
-                .sum();
-        model.addAttribute("totalStudents", totalStudents);
-        model.addAttribute("courseByInstructor",
-                course.getInstructor().getCourses().stream().limit(2).collect(Collectors.toList()));
-        model.addAttribute("courseByCategory",
-                course.getCategory().getCourses().stream().limit(5).collect(Collectors.toList()));
-        model.addAttribute("course", course);
-        return "homePage/course-detail";
-    }
+                int totalStudents = course.getInstructor().getCourses()
+                                .stream()
+                                .mapToInt(c -> c.getEnrollments().size())
+                                .sum();
+                model.addAttribute("totalStudents", totalStudents);
+                model.addAttribute("courseByInstructor",
+                                course.getInstructor().getCourses().stream().limit(2).collect(Collectors.toList()));
+                model.addAttribute("courseByCategory",
+                                course.getCategory().getCourses().stream().limit(5).collect(Collectors.toList()));
+                model.addAttribute("course", course);
+                return "homePage/course-detail";
+        }
 
 }
